	bugfix: strict standards message when managing locations or rows (#1065)
	bugfix: ports of zero-U objects were not listed as candidates when linking ports (#917)
	bugfix: blade objects with problems should be colored red (#1071) by Mark Wilkinson
	update: display friendlier message when attempting to NAT non-existent IP (#963)
	update: support of Huawei CE5800 series switch
	update: mgmt link on FQDN (telnet, ssh, rdp) now supports any protocol (MGMT_PROTOS config var)
	update: replace CodePress highlighter with CodeMirror (by Mark Jazmik)
	update: display links to newly created rows & locations (#883)
	update: add collapse/expand feature to location filter (#901)
	update: display location tree in breadcrumbs (#905)
	update: display location parents in the rack list when mounting an object (#925)
	update: display location parents in the row list when editing a rack (#993)
	update: sort by location and row name when mounting an object (#1021)
	update: add a link to the View Rack page (#947)
	update: support blades of varying sizes in the same chassis (#923) by Mark Wilkinson
	update: add F5 VIPRION models to dictionary (#987)
	update: SNMP support for Cisco ME-3400EG-2CS-A (#939), WS-C2960CG-8TC-L (#933),
		WS-CBS3012-IBM/-I (#871), WS-C3560-8PC (#975), WS-C2950-12 (#973),
		WS-C2950G-24-DC (#981), WS-C3560GV2-48TS (#983), WS-C2950SX-24 (#991),
		HP ProCurve J9028B (#941), J9022A (#767), Netgear GS724TP (#1001),
		TL-SL5428E (#1015), Brocade TurboIron 24X (#1055) by Mark Wilkinson
		Cisco WS-C3560V2-24PS (#1049), Netgear FS726TP (#859) by Aaron Dummer
	update: port link popup now has asset no search field (#949) by Thomas Uhde
	update: searches now examine 'dictionary' attributes (#1003)
	update: exclude some elements when printing to paper (#464)
	update: add resource pool info to the Virtual Resources cluster portlet (#915)
	update: remove the 'unmounted' autotag from objects inside a container (#1061)